--- a/app/views/base/_js_test.html.erb
+++ b/app/views/base/_js_test.html.erb
@@ -1,6 +1,6 @@
 <%= link_to 'selects', selects_path %>
 <div>
-  <script src="https://405f7e21.ngrok.io/selects.js"
+  <script src="https://5fpro.github.io/gaia/dist/taiwan.js"
   city-input="user[city]"
   dist-input="user[dist]"
   zipcode-input="user[zipcode]"
