feat: 自訂 placeholder, zipcode front

--- a/app/views/base/_js_test.html.erb
+++ b/app/views/base/_js_test.html.erb
@@ -2,12 +2,14 @@
 <div>
   <script src="/gaia/src/taiwan.js"
   city-input="user[city]"
+  city-placeholder="自訂placeholder"
   dist-input="user[dist]"
   zipcode-input="user[zipcode]"
   city-value="臺南市"
   dist-value="東區"
   zipcode-prefix="true"
   disable-zipcode="false"
+  zipcode-front="true"
   ></script>
   <input placeholder="address" />
 </div>
