feat: add exclude attribute to filter data

--- a/app/views/base/_js_test.html.erb
+++ b/app/views/base/_js_test.html.erb
@@ -10,6 +10,7 @@
   zipcode-prefix="true"
   disable-zipcode="false"
   zipcode-front="true"
+  excluded-data="澎湖縣,金門縣,連江縣,琉球鄉,綠島鄉,蘭嶼鄉"
   ></script>
   <input placeholder="address" />
 </div>
