feat: demeter zipcode selector

--- a/app/views/base/_js_test.html.erb
+++ b/app/views/base/_js_test.html.erb
@@ -1,4 +1,9 @@
-<%= link_to 'Demo', demo_path %>
+<div>
+  <%= link_to 'Demo', demo_path %>
+</div>
+<div>
+  <%= link_to 'Demo2', demo2_path %>
+</div>
 <div>
   <script src="/gaia/src/taiwan.js"
   city-input="user[city]"
