--- a/app/views/base/demo2.html.slim
+++ b/app/views/base/demo2.html.slim
@@ -2,7 +2,7 @@
   /= javascript_include_tag '/gaia/src/selects_v2.js', 'data-turbolinks-track': true
   = javascript_include_tag 'https://demeter.5fpro.com/tw/zipcode-selector.js', 'data-turbolinks-track': true
 
-input.js-gaia-zipcode data-city="#city" data-dist="#dist" value="220"/
+input.js-gaia-zipcode data-city="#city" data-dist="#dist" value="220" data-exclude="澎湖縣,琉球鄉,綠島鄉" /
 select#city placeholder="選擇縣市"
 select#dist placeholder="選擇鄉鎮區"
 
