--- a/app/views/base/demo2.html.slim
+++ b/app/views/base/demo2.html.slim
@@ -1,14 +1,20 @@
 - content_for :footer do
   = javascript_include_tag '/gaia/src/selects_v2.js', 'data-turbolinks-track': true
   /= javascript_include_tag 'https://demeter.5fpro.com/tw/zipcode-selector.js', 'data-turbolinks-track': true
+form
+  input.js-demeter-tw-zipcode-selector data-city="#city" data-dist="#dist" value="22048" data-exclude="澎湖縣,琉球鄉,綠島鄉" /
+  select#city placeholder="選擇縣市"
+  select#dist placeholder="選擇鄉鎮區"
 
-input.js-demeter-tw-zipcode-selector data-city="#city" data-dist="#dist" value="22048" data-exclude="澎湖縣,琉球鄉,綠島鄉" /
-select#city placeholder="選擇縣市"
-select#dist placeholder="選擇鄉鎮區"
+  = link_to '首頁', root_path
 
-= link_to '首頁', root_path
+  div
+    input.js-demeter-tw-zipcode-selector data-city="#city2" data-dist="#dist2"/
+    select#city2 placeholder="選擇縣市"
+    select#dist2 placeholder="選擇鄉鎮區"
 
-div
-  input.js-demeter-tw-zipcode-selector data-city="#city2" data-dist="#dist2"/
-  select#city2 placeholder="選擇縣市"
-  select#dist2 placeholder="選擇鄉鎮區"
+  div
+    input.js-demeter-tw-zipcode-selector data-city="#city3" data-dist="#dist3" value="哈哈哈" /
+    select#city3 placeholder="選擇縣市"
+    select#dist3 placeholder="選擇鄉鎮區"
+  input type="submit"
